chapter2/exercise_1.11/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pingpong-log
  name: pingpong-log
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong-log
  strategy: {}
  template:
    metadata:
      labels:
        app: pingpong-log
    spec:
      volumes:
        - name: shared-file
          persistentVolumeClaim:
            claimName: pingpong-log-pvclaim
      containers:
      - image: ping_pong:latest
        imagePullPolicy: Never
        name: ping-pong
        volumeMounts:
          - name: shared-file
            mountPath: /usr/src/app/file
      - image: log_output:latest
        imagePullPolicy: Never
        name: log-output
        volumeMounts:
          - name: shared-file
            mountPath: /usr/src/app/file
status: {}
