chapter2/exercise_1.11/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-log-svc
spec:
  type: ClusterIP
  selector:
    app: pingpong-log
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 3001
